--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HEML PUBLIC>
 <html>
     <head>
+	<title>宝贝，加油呀～</title>
     <meta charset="utf-8">
         <style>
             html, body
